--- a/src/less/index.less
+++ b/src/less/index.less
@@ -51,6 +51,10 @@
         justify-content: center;
         align-items: center;
       }
+      a:active {
+        background-color: #45bbca;
+        outline: none;
+      }
       .first {
         border-top: 1px solid white;
       }
@@ -105,7 +109,10 @@
       margin-bottom: 20px;
       box-sizing: border-box;
       padding: 3px;
-      border:none;
+      border: none;
+    }
+    input:hover {
+      cursor: pointer;
     }
     ::-webkit-input-placeholder {
       padding-left: 5px;
@@ -125,7 +132,10 @@
       margin-bottom: 20px;
       padding: 3px;
       box-sizing: border-box;
-      border:none;
+      border: none;
+    }
+    input:hover {
+      cursor: pointer;
     }
     input:focus {
       padding: 0;
@@ -142,8 +152,11 @@
       border-radius: 5px;
       padding: 3px;
       box-sizing: border-box;
-      border:none;
-
+      border: none;
+      margin-bottom: 20px;
+    }
+    textarea:hover {
+      cursor: pointer;
     }
     textarea:focus {
       outline: none;
@@ -154,4 +167,97 @@
       //
     }
   }
+  .formButtons {
+    width: 370px;
+    height: fit-content;
+    display: flex;
+    justify-content: space-between;
+    input {
+      height: 50px;
+      width: 45%;
+      font-size: 1.1rem;
+      font-weight: 700;
+      border-radius: 5px;
+      border: none;
+      color: white;
+      outline: none;
+      background-color: #4dd0e1;
+    }
+    input:hover {
+      cursor: pointer;
+    }
+    input:active {
+      background-color: #45bbca;
+      outline: none;
+    }
+  }
+}
+
+.projectTilesContainer {
+ 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  .projectTileAndText{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+     h2{
+      //text-align: center;
+      margin-top: 0;
+      margin-bottom:0;
+    }
+
+    .projectTile {
+      width: 100%;
+      margin: 0 auto;
+      //text-align: center;
+      //border: 1px solid black;
+      height: 300px;
+      background-size: cover;
+      overflow: hidden;
+      border-radius: 5px;
+      border:1px solid red;
+      display: flex;
+      justify-content: space-around;
+      padding: 10px 0;
+      margin: 1% 0;
+      .projectText{
+        width:40%;
+        //border:1px solid orange;
+        display: flex;
+        flex-direction:column;
+        justify-content: center;
+        a{
+          color: black;
+        }
+        .fa:hover{
+          color: #4dd0e1;
+          cursor: pointer;
+        }
+        
+      }
+    }
+    .innerTile{
+      height: 100%;
+      width: 46%;
+      background-size: cover;
+      background-position: center;
+      transition: all 0.5s ease; 
+      transition: all .5s; 
+    }
+    .innerTile:hover{
+      transform: scale(1.05);
+      cursor: pointer;
+    }
+
+    .portfolio{
+      background-image: url('../assets/portfolioCode.png')
+    }
+    .movebytes{
+      background-image: url('../assets/movebytes.png')
+    }
+  }
+  
 }
