--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,6 +26,11 @@
   margin: 0 auto;
   margin-top: 25px;
 }
+.nav .personalMenuInfo h2 {
+  width: fit-content;
+  margin: 0 auto;
+  margin-top: 20px;
+}
 .nav .nav-content {
   max-width: 900px;
   margin: 0 auto;
@@ -45,13 +50,14 @@
 }
 .nav .nav-content .centerLinks a {
   cursor: pointer;
-  min-height: 50px;
+  min-height: 60px;
   vertical-align: center;
   border-bottom: 1px solid white;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.3rem;
 }
 .nav .nav-content .centerLinks a:active {
   background-color: #45bbca;
@@ -64,6 +70,10 @@
   background-color: white;
   color: #4dd0e1;
   width: 100%;
+}
+.section {
+  background: #4d4d4d;
+  color: white;
 }
 .section-dark {
   background: #333;
@@ -87,7 +97,8 @@
   height: 40px;
   line-height: 2;
   border-radius: 5px;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 30px;
   box-sizing: border-box;
   padding: 3px;
   border: none;
@@ -108,7 +119,7 @@
   height: 40px;
   line-height: 2;
   border-radius: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   padding: 3px;
   box-sizing: border-box;
   border: none;
@@ -132,7 +143,7 @@
   padding: 3px;
   box-sizing: border-box;
   border: none;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 .contact .subjectMessage textarea:hover {
   cursor: pointer;
@@ -167,6 +178,20 @@
   background-color: #45bbca;
   outline: none;
 }
+.contact .contactIcons {
+  margin: 30px auto 30px auto;
+  width: fit-content;
+}
+.contact .contactIcons a {
+  color: white;
+}
+.contact .contactIcons a .faContact {
+  margin: 30px 20px;
+}
+.contact .contactIcons a .faContact:hover {
+  color: #4dd0e1;
+  cursor: pointer;
+}
 .projectTilesContainer {
   display: flex;
   flex-direction: column;
@@ -189,7 +214,6 @@
   background-size: cover;
   overflow: hidden;
   border-radius: 5px;
-  border: 1px solid red;
   display: flex;
   justify-content: space-around;
   padding: 10px 0;
@@ -202,7 +226,7 @@
   justify-content: center;
 }
 .projectTilesContainer .projectTileAndText .projectTile .projectText a {
-  color: black;
+  color: white;
 }
 .projectTilesContainer .projectTileAndText .projectTile .projectText .fa:hover {
   color: #4dd0e1;
@@ -225,4 +249,55 @@
 }
 .projectTilesContainer .projectTileAndText .movebytes {
   background-image: url('../assets/movebytes.png');
+}
+.App {
+  line-height: 1.3;
+  letter-spacing: 1.15px;
+}
+.skillContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.skillContainer .skillSection {
+  height: auto;
+  width: 48%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: no-wrap;
+  margin-bottom: 20px;
+}
+.skillContainer .skillSection .faCircle {
+  padding: 7px;
+  border-radius: 50%;
+  background-color: #4dd0e1;
+}
+.skillContainer .skillSection .faCircle .skillFa {
+  height: 30px;
+  width: 30px;
+  min-width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.skillContainer .skillSection .faCircle .skillFaDesktop {
+  height: 30px;
+  width: 32px;
+  min-width: 35px;
+  padding: 7px;
+  border-radius: 50%;
+  background-color: #4dd0e1;
+}
+.skillContainer .skillSection .skillText {
+  display: flex;
+  flex-direction: column;
+  margin-left: 3%;
+}
+.skillContainer .skillSection .skillText h3 {
+  margin: 0;
+}
+.skillContainer .skillSection .skillText p {
+  margin-top: 8px;
+  margin-bottom: 0;
 }
