--- a/src/less/index.less
+++ b/src/less/index.less
@@ -15,6 +15,7 @@
     margin: 0 auto;
     .personalMenuInfo h2 {
       text-align: center;
+
     }
     .face {
       background: url("../assets/tomsbighead2.jpeg");
@@ -24,6 +25,12 @@
       border: 2px solid white;
       margin: 0 auto;
       margin-top: 25px;
+
+    }
+    h2{
+      width: fit-content;
+      margin: 0 auto;
+      margin-top: 20px;
     }
   }
   .nav-content {
@@ -43,13 +50,14 @@
       align-items: center;
       a {
         cursor: pointer;
-        min-height: 50px;
+        min-height: 60px;
         vertical-align: center;
         border-bottom: 1px solid white;
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+        font-size: 1.3rem;
       }
       a:active {
         background-color: #45bbca;
@@ -67,19 +75,11 @@
     }
   }
 }
-
-//   .nav-item {
-//     color: #333333;
-//     width: 100%;
-//     border: 1px solid red;
-//     padding: 0;
-//     list-style-type: none;
-//   }
-
-//   .nav-item:hover {
-//     color: black;
-//     cursor: pointer;
-//   }
+ 
+.section {
+  background: #4d4d4d;
+  color: white;
+}
 
 .section-dark {
   background: #333;
@@ -106,7 +106,8 @@
       height: 40px;
       line-height: 2;
       border-radius: 5px;
-      margin-bottom: 20px;
+      margin-top: 20px;
+      margin-bottom: 30px;
       box-sizing: border-box;
       padding: 3px;
       border: none;
@@ -129,7 +130,7 @@
       height: 40px;
       line-height: 2;
       border-radius: 5px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       padding: 3px;
       box-sizing: border-box;
       border: none;
@@ -153,7 +154,7 @@
       padding: 3px;
       box-sizing: border-box;
       border: none;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
     textarea:hover {
       cursor: pointer;
@@ -191,6 +192,19 @@
       outline: none;
     }
   }
+
+  .contactIcons{
+    margin: 30px auto 30px auto;
+    width: fit-content;
+    a{color:white;
+  .faContact{
+    margin: 30px 20px;
+  }
+  .faContact:hover{
+    color: #4dd0e1;
+    cursor: pointer;
+  }}
+}
 }
 
 .projectTilesContainer {
@@ -218,7 +232,7 @@
       background-size: cover;
       overflow: hidden;
       border-radius: 5px;
-      border:1px solid red;
+      //border:1px solid red;
       display: flex;
       justify-content: space-around;
       padding: 10px 0;
@@ -230,7 +244,7 @@
         flex-direction:column;
         justify-content: center;
         a{
-          color: black;
+          color: white;
         }
         .fa:hover{
           color: #4dd0e1;
@@ -260,4 +274,62 @@
     }
   }
   
+}
+
+.App{
+  line-height: 1.3;
+  letter-spacing: 1.15px;
+}
+
+.skillContainer{
+  //border:1px solid white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+.skillSection{
+  height: auto;
+  width: 48%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: no-wrap;
+
+  margin-bottom: 20px;
+  //border: 1px solid red;
+  .faCircle{ 
+    padding:7px;
+    border-radius: 50%;
+    background-color:   #4dd0e1;
+  .skillFa{
+    height:30px;
+    width: 30px;
+    min-width: 30px;  
+display: flex;
+justify-content: center;
+align-items: center;
+    //border:1px solid white;
+  }
+  .skillFaDesktop{
+    height:30px;
+    width: 32px;
+    min-width: 35px; 
+    padding: 7px;
+    border-radius: 50%;
+    background-color:   #4dd0e1;
+    //border:1px solid white;
+  }
+}
+  .skillText{
+    display: flex;
+    flex-direction: column;
+    margin-left:3%;
+    h3{
+      margin: 0;
+    }
+    p{
+      margin-top: 8px;
+      margin-bottom: 0;
+    }
+  }
+  }
 }
