--- a/src/less/index.less
+++ b/src/less/index.less
@@ -15,7 +15,6 @@
     margin: 0 auto;
     .personalMenuInfo h2 {
       text-align: center;
-
     }
     .face {
       background: url("../assets/tomsbighead2.jpeg");
@@ -25,9 +24,8 @@
       border: 2px solid white;
       margin: 0 auto;
       margin-top: 25px;
-
     }
-    h2{
+    h2 {
       width: fit-content;
       margin: 0 auto;
       margin-top: 20px;
@@ -75,7 +73,7 @@
     }
   }
 }
- 
+
 .section {
   background: #4d4d4d;
   color: white;
@@ -107,7 +105,7 @@
       line-height: 2;
       border-radius: 5px;
       margin-top: 20px;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
       box-sizing: border-box;
       padding: 3px;
       border: none;
@@ -130,7 +128,7 @@
       height: 40px;
       line-height: 2;
       border-radius: 5px;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
       padding: 3px;
       box-sizing: border-box;
       border: none;
@@ -154,7 +152,10 @@
       padding: 3px;
       box-sizing: border-box;
       border: none;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
+    }
+    textarea::placeholder {
+      padding-top: 5px;
     }
     textarea:hover {
       cursor: pointer;
@@ -193,34 +194,38 @@
     }
   }
 
-  .contactIcons{
+  .contactIcons {
     margin: 30px auto 30px auto;
     width: fit-content;
-    a{color:white;
-  .faContact{
-    margin: 30px 20px;
+    a {
+      color: white;
+      .faContact {
+        margin: 30px 20px;
+      }
+      .faContact:hover {
+        color: #4dd0e1;
+        cursor: pointer;
+      }
+    }
+    .faContact:active {
+      background-color: #45bbca;
+    }
   }
-  .faContact:hover{
-    color: #4dd0e1;
-    cursor: pointer;
-  }}
-}
 }
 
 .projectTilesContainer {
- 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  .projectTileAndText{
+  .projectTileAndText {
     width: 100%;
     height: auto;
     display: flex;
     justify-content: space-between;
-     h2{
+    h2 {
       //text-align: center;
       margin-top: 0;
-      margin-bottom:0;
+      margin-bottom: 0;
     }
 
     .projectTile {
@@ -237,99 +242,121 @@
       justify-content: space-around;
       padding: 10px 0;
       margin: 1% 0;
-      .projectText{
-        width:40%;
+      .projectText {
+        width: 40%;
         //border:1px solid orange;
         display: flex;
-        flex-direction:column;
+        flex-direction: column;
         justify-content: center;
-        a{
+        a {
           color: white;
         }
-        .fa:hover{
+        .fa:hover {
           color: #4dd0e1;
           cursor: pointer;
         }
-        
+        .fa:active {
+          color: #45bbca;
+        }
       }
     }
-    .innerTile{
+    .innerTile {
       height: 100%;
       width: 46%;
       background-size: cover;
       background-position: center;
-      transition: all 0.5s ease; 
-      transition: all .5s; 
+      transition: all 0.5s ease;
+      transition: all 0.5s;
     }
-    .innerTile:hover{
+    .innerTile:hover {
       transform: scale(1.05);
       cursor: pointer;
     }
 
-    .portfolio{
-      background-image: url('../assets/portfolioCode.png')
+    .portfolio {
+      background-position: left;
+      background-image: url("../assets/portfolioCode.png");
     }
-    .movebytes{
-      background-image: url('../assets/movebytes.png')
+    .movebytes {
+      background-image: url("../assets/movebytes.png");
     }
   }
-  
 }
 
-.App{
+.App {
   line-height: 1.3;
   letter-spacing: 1.15px;
+  header {
+    height: 20em;
+    width: 100%;
+    background-image: url("../assets/peter-schreve-266863-unsplash.jpg");
+    background-size: cover;
+    background-position: center;
+  }
 }
 
-.skillContainer{
+footer {
+  height: 150px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #4d4d4d;
+  .footerFlex {
+    height: fit-content;
+    width:  fit-content; 
+  }
+}
+
+.skillContainer {
   //border:1px solid white;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-.skillSection{
-  height: auto;
-  width: 48%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: no-wrap;
-
-  margin-bottom: 20px;
-  //border: 1px solid red;
-  .faCircle{ 
-    padding:7px;
-    border-radius: 50%;
-    background-color:   #4dd0e1;
-  .skillFa{
-    height:30px;
-    width: 30px;
-    min-width: 30px;  
-display: flex;
-justify-content: center;
-align-items: center;
-    //border:1px solid white;
-  }
-  .skillFaDesktop{
-    height:30px;
-    width: 32px;
-    min-width: 35px; 
-    padding: 7px;
-    border-radius: 50%;
-    background-color:   #4dd0e1;
-    //border:1px solid white;
-  }
-}
-  .skillText{
+  .skillSection {
+    height: auto;
+    width: 48%;
     display: flex;
-    flex-direction: column;
-    margin-left:3%;
-    h3{
-      margin: 0;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: no-wrap;
+
+    margin-bottom: 20px;
+    //border: 1px solid red;
+    .faCircle {
+      padding: 7px;
+      border-radius: 50%;
+      background-color: #4dd0e1;
+      .skillFa {
+        height: 30px;
+        width: 30px;
+        min-width: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        //border:1px solid white;
+      }
+      .skillFaDesktop {
+        height: 30px;
+        width: 32px;
+        min-width: 35px;
+        padding: 7px;
+        border-radius: 50%;
+        background-color: #4dd0e1;
+        //border:1px solid white;
+      }
     }
-    p{
-      margin-top: 8px;
-      margin-bottom: 0;
+    .skillText {
+      display: flex;
+      flex-direction: column;
+      margin-left: 3%;
+      h3 {
+        margin: 0;
+      }
+      p {
+        margin-top: 8px;
+        margin-bottom: 0;
+      }
     }
-  }
   }
 }
