--- a/src/less/index.less
+++ b/src/less/index.less
@@ -280,6 +280,9 @@
     .movebytes {
       background-image: url("../assets/movebytes.png");
     }
+    .backend{
+      background-image: url("../assets/notesCode.png")
+    }
   }
 }
 
