--- a/src/less/index.less
+++ b/src/less/index.less
@@ -9,12 +9,28 @@
   box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.15);
   background-color: #4dd0e1;
   color: white;
-
+@media(max-width:1100px){
+  width: 16rem;
+}
+@media(max-width: 950px){
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
   .personalMenuInfo {
     width: 80%;
     margin: 0 auto;
+    @media(max-width: 950px){
+      width: fit-content;
+      margin: 0;
+      margin-left: 10px;
+
+    }
     .personalMenuInfo h2 {
       text-align: center;
+
     }
     .face {
       background: url("../assets/tomsbighead2.jpeg");
@@ -24,11 +40,17 @@
       border: 2px solid white;
       margin: 0 auto;
       margin-top: 25px;
+      @media(max-width: 950px){
+        display: none;
+      }
     }
     h2 {
       width: fit-content;
       margin: 0 auto;
       margin-top: 20px;
+      @media(max-width: 950px){
+        margin: 0;
+      }
     }
   }
   .nav-content {
@@ -41,11 +63,21 @@
     flex-direction: column;
     width: 100%;
     margin-top: 25px;
+    @media(max-width: 950px){
+      flex-direction: row;
+      margin: 0;
+      width: fit-content;
+    }
     .centerLinks {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      height: auto;
+      @media(max-width:950px){
+        flex-direction: row;
+        width: fit-content;
+      }
       a {
         cursor: pointer;
         min-height: 60px;
@@ -56,6 +88,14 @@
         justify-content: center;
         align-items: center;
         font-size: 1.3rem;
+        @media(max-width: 950px){
+        border-bottom: none;
+        height: 40px;
+        min-height: 0;
+        margin: 0 5px;
+        padding: 0 5px;
+        }
+ 
       }
       a:active {
         background-color: #45bbca;
@@ -63,6 +103,9 @@
       }
       .first {
         border-top: 1px solid white;
+        @media(max-width: 950px){
+          border: none;
+        }
       }
 
       .active {
@@ -92,6 +135,13 @@
 
 .content {
   padding-right: 20rem;
+  @media(max-width: 1100px){
+    padding-right: 16rem;
+
+  }
+  @media(max-width: 950px){
+    padding-right: 0;
+  }
 }
 
 .contact {
@@ -294,6 +344,9 @@
     background-image: url("../assets/peter-schreve-266863-unsplash.jpg");
     background-size: cover;
     background-position: center;
+    @media(max-width:950px){
+      margin-top: 40px;
+    }
   }
 }
 
