--- a/src/css/index.css
+++ b/src/css/index.css
@@ -62,6 +62,11 @@
     margin: 0;
   }
 }
+@media (max-width: 540px) {
+  .nav .personalMenuInfo h2 {
+    display: none;
+  }
+}
 .nav .nav-content {
   max-width: 900px;
   margin: 0 auto;
@@ -80,6 +85,11 @@
     width: fit-content;
   }
 }
+@media (max-width: 540px) {
+  .nav .nav-content {
+    width: 100%;
+  }
+}
 .nav .nav-content .centerLinks {
   display: flex;
   flex-direction: column;
@@ -93,6 +103,11 @@
     width: fit-content;
   }
 }
+@media (max-width: 540px) {
+  .nav .nav-content .centerLinks {
+    width: 100%;
+  }
+}
 .nav .nav-content .centerLinks a {
   cursor: pointer;
   min-height: 60px;
@@ -103,6 +118,7 @@
   justify-content: center;
   align-items: center;
   font-size: 1.3rem;
+  padding: 0;
 }
 @media (max-width: 950px) {
   .nav .nav-content .centerLinks a {
@@ -142,6 +158,11 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 40px;
+}
+@media (max-width: 540px) {
+  .section-content {
+    padding: 20px;
+  }
 }
 .content {
   padding-right: 20rem;
@@ -232,6 +253,14 @@
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 420px) {
+  .contact .formButtons {
+    flex-direction: column;
+    justify-content: space-between;
+    height: 125px;
+    align-items: center;
+  }
+}
 .contact .formButtons input {
   height: 50px;
   width: 45%;
@@ -294,11 +323,22 @@
   padding: 10px 0;
   margin: 1% 0;
 }
+@media (max-width: 540px) {
+  .projectTilesContainer .projectTileAndText .projectTile {
+    flex-direction: column;
+    height: 470px;
+  }
+}
 .projectTilesContainer .projectTileAndText .projectTile .projectText {
   width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+@media (max-width: 540px) {
+  .projectTilesContainer .projectTileAndText .projectTile .projectText {
+    width: 100%;
+  }
 }
 .projectTilesContainer .projectTileAndText .projectTile .projectText a {
   color: white;
@@ -317,6 +357,13 @@
   background-position: center;
   transition: all 0.5s ease;
   transition: all 0.5s;
+}
+@media (max-width: 549px) {
+  .projectTilesContainer .projectTileAndText .innerTile {
+    width: 100%;
+    height: 55%;
+    background-position: top;
+  }
 }
 .projectTilesContainer .projectTileAndText .innerTile:hover {
   transform: scale(1.05);
@@ -372,6 +419,11 @@ footer .footerFlex {
   align-items: center;
   flex-wrap: no-wrap;
   margin-bottom: 20px;
+}
+@media (max-width: 540px) {
+  .skillContainer .skillSection {
+    width: 100%;
+  }
 }
 .skillContainer .skillSection .faCircle {
   padding: 7px;
