--- a/src/less/index.less
+++ b/src/less/index.less
@@ -51,6 +51,9 @@
       @media(max-width: 950px){
         margin: 0;
       }
+      @media(max-width:540px){
+        display: none;
+      }
     }
   }
   .nav-content {
@@ -68,6 +71,9 @@
       margin: 0;
       width: fit-content;
     }
+    @media(max-width: 540px){
+      width: 100%;
+    }
     .centerLinks {
       display: flex;
       flex-direction: column;
@@ -77,6 +83,9 @@
       @media(max-width:950px){
         flex-direction: row;
         width: fit-content;
+      }
+      @media(max-width:540px){
+        width: 100%;
       }
       a {
         cursor: pointer;
@@ -88,6 +97,7 @@
         justify-content: center;
         align-items: center;
         font-size: 1.3rem;
+        padding: 0;
         @media(max-width: 950px){
         border-bottom: none;
         height: 40px;
@@ -131,6 +141,9 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 40px;
+  @media(max-width: 540px){
+    padding: 20px;
+  }
 }
 
 .content {
@@ -224,6 +237,12 @@
     height: fit-content;
     display: flex;
     justify-content: space-between;
+    @media(max-width:420px){
+      flex-direction: column;
+      justify-content: space-between;
+      height: 125px;
+      align-items: center;
+    }
     input {
       height: 50px;
       width: 45%;
@@ -267,6 +286,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
   .projectTileAndText {
     width: 100%;
     height: auto;
@@ -292,12 +312,19 @@
       justify-content: space-around;
       padding: 10px 0;
       margin: 1% 0;
+      @media(max-width: 540px){
+        flex-direction: column;
+        height: 470px;
+      }
       .projectText {
         width: 40%;
         //border:1px solid orange;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        @media(max-width:540px){
+          width: 100%;
+        }
         a {
           color: white;
         }
@@ -317,6 +344,11 @@
       background-position: center;
       transition: all 0.5s ease;
       transition: all 0.5s;
+    @media(max-width: 549px){
+      width: 100%;
+      height: 55%;
+      background-position: top;
+    }
     }
     .innerTile:hover {
       transform: scale(1.05); 
@@ -378,6 +410,9 @@ footer {
 
     margin-bottom: 20px;
     //border: 1px solid red;
+    @media(max-width:540px){
+      width: 100%;
+    }
     .faCircle {
       padding: 7px;
       border-radius: 50%;
