updated favicon, head title, added active color change for contact me favicons at bottom of page

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -40,6 +40,7 @@
 }
 .nav .personalMenuInfo .face {
   background: url("../assets/tomsbighead2.jpeg");
+  background-size: contain;
   width: 7rem;
   height: 7rem;
   border-radius: 50%;
@@ -293,8 +294,8 @@
   color: #4dd0e1;
   cursor: pointer;
 }
-.contact .contactIcons .faContact:active {
-  background-color: #45bbca;
+.contact .contactIcons a .faContact:active {
+  color: #45bbca;
 }
 .projectTilesContainer {
   display: flex;
