--- a/src/less/index.less
+++ b/src/less/index.less
@@ -34,6 +34,7 @@
     }
     .face {
       background: url("../assets/tomsbighead2.jpeg");
+      background-size: contain;
       width: 7rem;
       height: 7rem;
       border-radius: 50%;
@@ -275,9 +276,10 @@
         color: #4dd0e1;
         cursor: pointer;
       }
+      .faContact:active {
+        color: #45bbca;;
     }
-    .faContact:active {
-      background-color: #45bbca;
+   
     }
   }
 }
