--- a/src/less/index.less
+++ b/src/less/index.less
@@ -28,6 +28,9 @@
       margin-left: 10px;
 
     }
+    @media(max-width: 410px){
+      margin: 0;
+    }
     .personalMenuInfo h2 {
       text-align: center;
 
@@ -106,7 +109,9 @@
         margin: 0 5px;
         padding: 0 5px;
         }
- 
+        @media(max-width: 410px){
+          font-size: 1rem;
+        }
       }
       a:active {
         background-color: #45bbca;
