--- a/src/less/index.less
+++ b/src/less/index.less
@@ -240,6 +240,7 @@
   }
   .formButtons {
     width: 370px;
+    margin: 0 auto;
     height: fit-content;
     display: flex;
     justify-content: space-between;
@@ -248,10 +249,11 @@
       justify-content: space-between;
       height: 125px;
       align-items: center;
+      width: 300px;
     }
     input {
       height: 50px;
-      width: 45%;
+      width: 145px;
       font-size: 1.1rem;
       font-weight: 700;
       border-radius: 5px;
